# sparql.rs

./: .gitattributes  CHANGES.md  CITATION.cff  Cargo.toml  README.md
lib/sparql/: Cargo.toml
lib/sparql-algebra/: Cargo.toml
lib/sparql-derive/: Cargo.toml
lib/sparql-derive/src/: lib.rs
lib/sparql-engine/: Cargo.toml
lib/sparql-parser/: Cargo.toml
lib/sparql-parser/src/: error.rs  lib.rs  parse.rs  unit.rs
lib/sparql-store/: Cargo.toml
lib/sparql-store/src/: lib.rs  read.rs  store.rs  write.rs
lib/sparql-store/src/interop/: oxrdf.rs
lib/sparql/src/: lib.rs
