# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = [
    "lib/sparql",
    "lib/sparql-algebra",
    "lib/sparql-derive",
    "lib/sparql-engine",
    "lib/sparql-parser",
    "lib/sparql-store",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Arto Bendiken"]
edition = "2024"
rust-version = "1.85"
description = "A dataflow implementation of the SPARQL graph query language."
#documentation = "https://docs.rs/sparql"
readme = true
homepage = "https://sparql.rs"
repository = "https://github.com/rust-rdf/sparql.rs"
license = "Unlicense"
keywords = ["sparql"]
categories = ["asynchronous", "no-std"]
publish = true

[workspace.dependencies]
sparql = { version = "0.0.0", default-features = false }
sparql-algebra = { version = "0.0.0", default-features = false }
sparql-derive = { version = "0.0.0", default-features = false }
sparql-engine = { version = "0.0.0", default-features = false }
sparql-parser = { version = "0.0.0", default-features = false }
sparql-store = { version = "0.0.0", default-features = false }

# Interoperability with RDF.rs:
rdf-model = { version = "0.4.3", default-features = true }
rdf-query = { version = "0.4.3", default-features = true }
rdf-store = { version = "0.4.3", default-features = true }

# Interoperability with Oxigraph:
oxrdf = { version = "0.3", default-features = false, features = ["rdf-12"] }
sparesults = { version = "0.3", default-features = false, features = ["sparql-12"] }
spareval = { version = "0.2", default-features = false, features = ["sparql-12"] }
spargebra = { version = "0.4", default-features = false, features = ["sparql-12"] }
sparopt = { version = "0.3", default-features = false, features = ["sparql-12"] }

# Interoperability:
async-flow = { version = "0.1.5", default-features = false, features = ["tokio"] }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
known-languages = { version = "0.0", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }

[patch.crates-io]
#async-flow = { git = "https://github.com/artob/async-flow.git" }
sparql = { path = "lib/sparql" }
sparql-algebra = { path = "lib/sparql-algebra" }
sparql-derive = { path = "lib/sparql-derive" }
sparql-engine = { path = "lib/sparql-engine" }
sparql-parser = { path = "lib/sparql-parser" }
