# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sparql-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["oxrdf"]
alloc = ["rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Integrations:
oxrdf = ["dep:oxrdf", "dep:spareval", "dep:spargebra", "rdf-model/oxrdf", "rdf-store/oxrdf"]

[dependencies]
futures-util.workspace = true
rdf-model.workspace = true
rdf-store.workspace = true
tokio.workspace = true

# Integrations:
oxrdf = { workspace = true, optional = true }
spareval = { workspace = true, optional = true }
spargebra = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
spareval.workspace = true
spargebra.workspace = true
